Bug 28194 - [GLES2] many glean and piglit case regressed (on mesa master branch)
Summary: [GLES2] many glean and piglit case regressed (on mesa master branch)
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Kristian Høgsberg
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-21 01:01 UTC by fangxun
Modified: 2010-05-28 01:11 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description fangxun 2010-05-21 01:01:07 UTC
System Environment:
--------------------------
machines: piketon, G45
Libdrm:		(master)a3305b076c005e0d3bd55da0214e91413cf65b48
Mesa:		(master)5a5a82d7e88c2971acad026b94e90588b2367a22
Xserver:    (master)673eb707ce6737284c4886265ba149c5587a74e2
Xf86_video_intel: (master)509df27c7401e96d3062890da73f6af6629adef4
Kernel: (for-linus)722154e4cacf015161efe60009ae9be23d492296


Bug detailed description:
-------------------------
Glean case api2/shaderAPI and 30 piglit case (glslparsertest_TextureRectangleSamplers.frag, glslparsertest_glsl2_gst-gl-bulge.frag, glslparsertest_glsl2_gst-gl-glass.frag, ...) failed for adding parameter "--enable-gles2" on MESA build.  This issue only happens on mesa master branch. It works well if no "--enable-gles2". 

Reproduce steps:
--------------------
1../autogen.sh --prefix=$INSTALL_ROOT --with-driver=dri --with-dri-  drivers="i965" --with-dri-driverdir=$INSTALL_ROOT/lib/dri --disable-gallium --without-demos --disable-glw --disable-gallium-intel --enable-gles2
2.make and make install
3.run glean and piglit case
Comment 1 fangxun 2010-05-23 23:10:41 UTC
This issue also happens on pineview. It make glean case(pbo,texgen,vertProg1) and many piglit case(bugs_fdo22540,bugs_fdo25614-genmipmap,fbo_fbo-1d,fbo_fbo-3d,fbo_fbo-blit,fbo_fbo-copypix,fbo_fbo-copyteximage,...)faied. These failed case is different to failed case on G45. 

It also causes 3D games(openarena, ut2004) black screen on pineview. With black screen, The performance is improved 168%, from 19 to 51. 
3D games works well on G45.
Comment 2 Kristian Høgsberg 2010-05-24 07:03:43 UTC
Should be fixed by:

commit f67b020a942911f80b7b774c6d64701d1981c608
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Mon May 24 10:01:38 2010 -0400

    mesa: Handle FEATURE_es2_glsl differences at runtime too
    
    Now that we can support different APIs at runtime, we need to check the
    context for the API we're currently providing as well.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=28194
Comment 3 fangxun 2010-05-28 01:11:02 UTC
Works well. Marking bug as verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.