mesa: Handle FEATURE_es2_glsl differences at runtime too

Now that we can support different APIs at runtime, we need to check the
context for the API we're currently providing as well.

https://bugs.freedesktop.org/show_bug.cgi?id=28194